--- a/package.json
+++ b/package.json
@@ -1,1 +1,15 @@
-
+{
+  "name": "utools-roblox",
+  "version": "1.0.0",
+  "description": "UTools - Roblox Username Checker",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
+  },
+  "engines": {
+    "node": ">=14.0.0"
+  }
+}
